main.tf
provider "aws" {
  region = "eu-north-1" 
}

resource "aws_security_group" "Labuba" {
  name        = "allow_web_ssh_v2" 
  description = "Allow ssh and http traffic"
  # ... все інше залишається без змін
}

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_instance" "lab_6" {
  ami           = "ami-080254318c2d8932f" 
  instance_type = "t3.micro"
  key_name      = "my-aws-key" 

 
  vpc_security_group_ids = [aws_security_group.Labuba.id]

  user_data = <<-EOF
              #!/bin/bash
              sudo apt-get update
              sudo apt-get install -y docker.io
              sudo systemctl start docker
              sudo systemctl enable docker
              sudo usermod -aG docker ubuntu

              
              sudo docker run -d --name watchtower -v /var/run/docker.sock:/var/run/docker.sock containrrr/watchtower --interval 30

          
              sudo docker run -d -p 80:80 --name my-app kornini/lab4:latest
              EOF

  tags = {
    Name = "DockerAppServer"
  }
}

output "instance_ip" {
  value = aws_instance.lab_6.public_ip
}
